--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<td colspan="2">阿里巴巴</td>
 						<td>2017-10-01</td>
 						<td>杭州</td>
-						<td colspan="2">210512451万</td>
+						<td rowspan="2">210512451万</td>
 					</tr>
 					<tr>
 						<td rowspan="2">11</td>
