--- a/index.html
+++ b/index.html
@@ -5,37 +5,24 @@
 	</head>
 	<body>
 		<div class="table">
-			<table>
-				<thead>
-					<tr>
-						<th>创始人</th>
-						<th>公司名称</th>
-						<th>创建时间</th>
-						<th>创建地点</th>
-						<th>创建资金</th>
-					</tr>
-        </thead>
-				<tbody>
-					<tr>
-						<td>马云</td>
-						<td colspan="2">阿里巴巴</td>
-						<td>2017-10-01</td>
-						<td>杭州</td>
-						<td rowspan="2">210512451万</td>
-					</tr>
-					<tr>
-						<td rowspan="2">11</td>
-						<td>22</td>
-						<td>333</td>
-						<td>444</td>
-						<td rowspan="3">555</td>
-					</tr>
-				</tbody>
-			</table>
+			<table border="1">
+        <tr>
+          <th colspan="2">Company in USA</th>
+        </tr>
+        <tr>
+          <td>Apple, Inc.</td>
+          <td>1 Infinite Loop Cupertino, CA 95014</td>
+        </tr>
+        <tr>
+          <td>Google, Inc.</td>
+          <td>1600 Amphitheatre Parkway Mountain View, CA 94043</td>
+        </tr>
+      </table>
 		</div>
-		<input type="button" id="excel" value="导出" />
+    <input type="button" id="excel" value="导出" />
+    <input type="file" name="" id="file">
   </body>
-  <script src="./dist/js/index.js"></script>
+  <script src="./dist/js/micro-office.js"></script>
   <script>
     var el = document.getElementsByTagName('table')[0];
     var microOffice= new MicroOffice();
@@ -45,6 +32,27 @@
 				filename: '测试'
 			});
     }
+    const input = document.querySelector('input[type=file]');
+    input.addEventListener('change', (el)=>{
+      const file = el.target.files[0];
+      // const reader = new FileReader()
+      // // reader.readAsDataURL(file);
+      // reader.readAsArrayBuffer(file);
+      // reader.onload = function(e) {
+      //   var data = e.target.result;
+      //   console.log(data);
+      // } 
+      microOffice.read(file);
+    })
+    // input.addEventListener('change', (el)=>{
+    //   const reader = new FileReader()
+    //   reader.readAsDataURL(el.target.files[0]) // input.files[0]为第一个文件
+    //   reader.onload = (readRes)=>{
+    //     console.log(readRes);
+    //     // document.body.innerHTML += reader.result  // reader.result为获取结果
+    //   }
+    // }, false)
+  
   </script>
   <!-- <script src="./lib/index.js"></script> -->
 </html>
